--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: rise-of-cults
 version: '1.0-SNAPSHOT'
-main: com.github.koloss.cults.RiseOfCultsPlugin
+main: com.github.koloss.ascension.AscensionPlugin
 api-version: '1.21'
